# Parcial1-Filtros-openCV

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bryan_lunay/opencv_parcial/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/bryan_lunay/opencv_parcial/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bryan_lunay/opencv_parcial/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
